# mistral-designate-actions

./: .gitignore  AUTHORS  ChangeLog  README.md  requiremets.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
designate_actions/: utils.py
designate_actions/v2/: recordsets.py  zones.py
designatev2_actions/: utils.py  zone.py
