[metadata]
name = mistral-designatev2-actions
summary = Mistral Designate V2 actions
description-file =
    README.md

license = Apache License, Version 2.0
home-page = https://docs.openstack.org/mistral/latest/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = DEVOPS
author-email = devops@nexign-systems.com

[files]
packages =
    designatev2_actions

[entry_points]
mistral.actions =
    designatev2.zone_list = designatev2_actions.zone:ZoneList

[wheel]
universal = 1

[bdist_rpm]
requires = python2-openstacksdk