[metadata]
name = mistral-designate-actions
summary = Mistral Designate actions
description-file =
    README.md

license = Apache License, Version 2.0
home-page = https://docs.openstack.org/mistral/latest/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = ITD27M01
author-email = igortiunov@gmail.com

[files]
packages =
    designate_actions

[entry_points]
mistral.actions =
    designatev2.zones_list = designate_actions.v2.zones:ZonesList
    designatev2.zone_create = designate_actions.v2.zones:ZoneCreate
    designatev2.recordsets_list = designate_actions.v2.recordsets:RecordsetsList
    designatev2.recordset_create = designate_actions.v2.recordsets:RecordsetCreate
    designatev2.recordset_delete = designate_actions.v2.recordsets:RecordsetDelete
    designatev2.recordset_update = designate_actions.v2.recordsets:RecordsetUpdate

[wheel]
universal = 1

[bdist_rpm]
requires = python2-openstacksdk